# thanasis_bs4_poetry_example

./: example_beautifulsoup4_with_html5lib.py  pyproject.toml  requirements.txt
